Fixed height of attributes and added scroll bars on overflow

--- a/hub/remote/public/core/device/device.css
+++ b/hub/remote/public/core/device/device.css
@@ -14,7 +14,9 @@
 }
 
 .device-attributes {
-    flex-direction : column;
-    display: flex;
-    flex-grow:1;
+    flex-direction  : column;
+    display         : flex;
+    flex-grow       : 1;
+    flex-shrink     : 0;
+    overflow-y      : auto;
 }
